--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,11 @@ h2.titulo span {
   margin: 0 5px;
 }
 
+.menu-mobile nav {
+  display: none;
+  display: block;
+}
+
 /* ESTILO DO HEADER */
 
 #header {
